--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -109,7 +109,7 @@ jobs:
         with:
           files: dist/interactive-data
           tag_name: v1.0.${{ github.run_number }}
-          release_name: "Release v1.0.${{ github.run_number }}"
+          name: "Release v1.0.${{ github.run_number }}"
           draft: false
           prerelease: false
         env:
