--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 permissions:
-  contents: write 
+  contents: write
 
 jobs:
   test:
@@ -60,7 +60,10 @@ jobs:
 
       - name: Run mypy (Type Checking)
         run: mypy --config-file mypy.ini src/
-      
+
+      - name: Check for Outdated Dependencies
+        run: |
+          pip list --outdated
 
       - name: Run bandit (Security Check)
         run:  timeout 120s bandit -r src/ --exclude tests/,docs/,config_profiles/
@@ -79,11 +82,12 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies (including stubs)
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install pip-tools
+          pip-compile requirements.in
           pip install -r requirements.txt
-          pip install PyQt5-stubs
 
       - name: Build Executable
         run: |
@@ -120,4 +124,3 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
