--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,9 +10,10 @@ repos:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.10.0  # Update this to the latest version
+    rev: v1.10.0
     hooks:
       - id: mypy
+        args: ["--config-file=mypy.ini", "--no-incremental", "src/"]
         additional_dependencies: [PyQt5-stubs]
 
   - repo: https://github.com/PyCQA/bandit
