--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,9 +13,10 @@ repos:
     rev: v1.10.0
     hooks:
       - id: mypy
-        args: ["--config-file=mypy.ini", "--no-incremental", "src/"]
+        entry: mypy src/
+        args: ["--config-file=mypy.ini", "--no-incremental"]
         additional_dependencies: [PyQt5-stubs]
-        files: ^src/  # 👈 This restricts pre-commit to only run mypy on files in /src
+        pass_filenames: false  # ✅ This is the KEY to prevent pre-commit from passing individual file paths
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.5  # Update this to the latest version
