--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 1.2.0
 commit = True
 tag = True
 
-[bumpversion:file:src/__init__.py]
+[bumpversion:file:src/version.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
