Updated bumperversion file

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,6 @@ tag = True
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:file:doc/CHANGELOG.md]
+[bumpversion:file:docs/CHANGELOG.md]
 search = ## [{current_version}]
 replace = ## [{new_version}]
