--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 #
 altgraph==0.17.4
     # via pyinstaller
+asteval==1.0.6
+    # via -r requirements.in
 bandit==1.8.3
     # via -r requirements.in
 black==25.1.0
@@ -60,7 +62,9 @@ platformdirs==4.3.7
     #   black
     #   virtualenv
 pluggy==1.5.0
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-qt
 pre-commit==4.2.0
     # via -r requirements.in
 pycodestyle==2.12.1
@@ -82,6 +86,10 @@ pyqt5-sip==12.17.0
 pyqt5-stubs==5.15.6.0
     # via -r requirements.in
 pytest==8.3.5
+    # via
+    #   -r requirements.in
+    #   pytest-qt
+pytest-qt==4.4.0
     # via -r requirements.in
 pywin32-ctypes==0.2.3
     # via pyinstaller
